2005-10-02	Istvan Varga	<ivarga@csounds.com>
	* restored Tcl/Tk control opcodes
	* xyin fixes

2005-09-30	Istvan Varga	<ivarga@csounds.com>
	* new API functions for random numbers:
	  csoundRand31(), csoundSeedRandMT(), csoundRandMT()
	* removed all uses of rand(), csoundRandMT() is used instead in
	  the "x-class" random opcodes and GEN21, and csoundRand31()
	  in all other opcodes that previously used rand()
	* attempts to get xyin working

2005-09-25	Istvan Varga	<ivarga@csounds.com>
	* frontends/CsoundVST/CppSound.cpp, frontends/CsoundVST/CppSound.hpp:
	* frontends/CsoundVST/CsoundVST.cpp:
	* flcsound/synthesizer.cpp:
	* H/csoundCore.h, H/csound.h, Top/csound.c:
	  removed the following API functions:
	    csoundSetFLTKThreadLocking()    (FLTK moved out of libcsound)
	    csoundGetFLTKThreadLocking()    (FLTK moved out of libcsound)
	    csoundGetProgress()             (was unimplemented)
	    csoundGetProfile()              (was unimplemented)
	    csoundGetCpuUsage()             (was unimplemented)
	* InOut/FL_graph.cpp, InOut/widgets.cpp, InOut/winFLTK.c:
	* InOut/window.c, Makefile-win32, SConstruct:
	  moved FLTK display code from libcsound to the widgets plugin

2005-09-22	Istvan Varga	<ivarga@csounds.com>
	* frontends/csound/csound_main.c:
	  allow logging to file (-O NAME or --logfile=NAME)
	* frontends/csound/sched.c:
	  --sched can be used in the format --sched=P,C,T now, where
	  the parameters are:
	    P: priority (-20 to -1: nice, 0: normal, 1 to 99: SCHED_RR)
	    C: maximum allowed CPU usage (1 to 99 percents)
	    T: time interval to check CPU usage (1 to 60 seconds)

2005-09-18	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c, H/csound.h:
	  more complete implementation of bus interface (may still need
	  some changes)
	* Engine/entry2.c, H/str_ops.h, OOps/str_ops.c:
	  new opcodes

2005-09-17	Istvan Varga	<ivarga@csounds.com>
	* Engine/namedins.c:
	  started to implement bus with named channels; this is not
	  complete yet